--- a/nhost/metadata/databases/default/tables/public_meeting_step.yaml
+++ b/nhost/metadata/databases/default/tables/public_meeting_step.yaml
@@ -96,7 +96,7 @@ event_triggers:
       interval_sec: 10
       num_retries: 3
       timeout_sec: 60
-    webhook: '{{NHOST_BACKEND_URL}}/v1/functions/routes/indexEntity'
+    webhook: '{{NHOST_FUNCTIONS_URL}}/routes/indexEntity'
     headers:
       - name: x-nhost-webhook-secret
         value_from_env: NHOST_WEBHOOK_SECRET
