--- a/nhost/metadata/databases/default/tables/public_task.yaml
+++ b/nhost/metadata/databases/default/tables/public_task.yaml
@@ -103,7 +103,7 @@ event_triggers:
       interval_sec: 10
       num_retries: 3
       timeout_sec: 60
-    webhook: '{{NHOST_BACKEND_URL}}/v1/functions/routes/indexEntity'
+    webhook: '{{NHOST_FUNCTIONS_URL}}/routes/indexEntity'
     headers:
       - name: x-nhost-webhook-secret
         value_from_env: NHOST_WEBHOOK_SECRET
@@ -126,7 +126,7 @@ event_triggers:
       interval_sec: 10
       num_retries: 0
       timeout_sec: 60
-    webhook: '{{NHOST_BACKEND_URL}}/v1/functions/routes/events/sendTaskAssignedNotification'
+    webhook: '{{NHOST_FUNCTIONS_URL}}/routes/events/sendTaskAssignedNotification'
     headers:
       - name: x-nhost-webhook-secret
         value_from_env: NHOST_WEBHOOK_SECRET
