Add meeting summary with AI generation

--- a/nhost/metadata/databases/default/tables/public_meeting.yaml
+++ b/nhost/metadata/databases/default/tables/public_meeting.yaml
@@ -67,6 +67,7 @@ select_permissions:
         - recurringId
         - startDate
         - stepsConfig
+        - summary
         - title
         - videoConf
       filter:
@@ -89,6 +90,7 @@ update_permissions:
         - participantsScope
         - startDate
         - stepsConfig
+        - summary
         - title
         - videoConf
       filter:
