--- a/functions/package.json
+++ b/functions/package.json
@@ -28,9 +28,10 @@
     "node-html-markdown": "^1.3.0",
     "node-mailjet": "^5.1.1",
     "openai": "^3.3.0",
-    "react-email": "^1.9.4",
     "react": "^18.2.0",
+    "react-email": "^1.9.4",
     "rrule": "^2.7.2",
+    "slugify": "^1.6.6",
     "stripe": "^11.7.0",
     "xlsx": "^0.18.5",
     "yup": "^0.32.11"
