--- a/nhost/metadata/databases/default/tables/public_meeting_recurring.yaml
+++ b/nhost/metadata/databases/default/tables/public_meeting_recurring.yaml
@@ -104,3 +104,21 @@ delete_permissions:
                       _eq: Admin
                   - role:
                       _eq: Owner
+event_triggers:
+  - name: index-meeting-recurring
+    definition:
+      delete:
+        columns: '*'
+      enable_manual: false
+      insert:
+        columns: '*'
+      update:
+        columns: '*'
+    retry_conf:
+      interval_sec: 10
+      num_retries: 3
+      timeout_sec: 60
+    webhook: '{{NHOST_FUNCTIONS_URL}}/routes/events/indexEntity'
+    headers:
+      - name: x-nhost-webhook-secret
+        value_from_env: NHOST_WEBHOOK_SECRET
