--- a/nhost/metadata/databases/default/tables/tables.yaml
+++ b/nhost/metadata/databases/default/tables/tables.yaml
@@ -7,6 +7,7 @@
 - "!include auth_user_roles.yaml"
 - "!include auth_user_security_keys.yaml"
 - "!include auth_users.yaml"
+- "!include public_app_type.yaml"
 - "!include public_circle.yaml"
 - "!include public_circle_member.yaml"
 - "!include public_decision.yaml"
@@ -38,5 +39,6 @@
 - "!include public_thread_member_status.yaml"
 - "!include public_thread_poll_answer.yaml"
 - "!include public_thread_status.yaml"
+- "!include public_user_app.yaml"
 - "!include storage_buckets.yaml"
 - "!include storage_files.yaml"
