--- a/nhost/metadata/databases/default/tables/auth_users.yaml
+++ b/nhost/metadata/databases/default/tables/auth_users.yaml
@@ -92,6 +92,15 @@ object_relationships:
     using:
       foreign_key_constraint_on: default_role
 array_relationships:
+  - name: apps
+    using:
+      manual_configuration:
+        column_mapping:
+          id: userId
+        insertion_order: null
+        remote_table:
+          name: user_app
+          schema: public
   - name: members
     using:
       manual_configuration:
