--- a/nhost/metadata/databases/default/tables/public_user_app.yaml
+++ b/nhost/metadata/databases/default/tables/public_user_app.yaml
@@ -1,6 +1,16 @@
 table:
   name: user_app
   schema: public
+object_relationships:
+  - name: user
+    using:
+      manual_configuration:
+        column_mapping:
+          userId: id
+        insertion_order: null
+        remote_table:
+          name: users
+          schema: auth
 select_permissions:
   - role: user
     permission:
