--- a/functions/package.json
+++ b/functions/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@rolebase/functions",
+  "version": "1.0.0",
   "license": "MIT",
   "scripts": {
     "dev": "npm run codegen & npm run collab",
@@ -11,6 +12,7 @@
     "emails:build": "ts-node ./_src/emails/build.ts"
   },
   "dependencies": {
+    "@jrmdayn/googleapis-batcher": "^0.5.0",
     "@microsoft/microsoft-graph-types-beta": "^0.40.0-preview",
     "@nhost/nhost-js": "^2.2.17",
     "@react-email/button": "^0.0.10",
@@ -22,6 +24,7 @@
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "googleapis": "^128.0.0",
     "graphql": "^16.6.0",
     "i18next": "^21.6.16",
     "ical-generator": "^3.6.1",
