--- a/functions/package.json
+++ b/functions/package.json
@@ -53,5 +53,10 @@
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2",
     "vitest": "^0.34.6"
+  },
+  "overrides": {
+    "@jrmdayn/googleapis-batcher": {
+      "googleapis": "$googleapis"
+    }
   }
 }
