--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "dev": "turbo run dev",
     "build": "turbo run build",
-    "postinstall": "patch-package",
+    "postinstall": "patch-package && cd functions && npm i --package-lock-only --workspaces false",
     "lint": "eslint ./packages --ext .jsx,.js,.ts,.tsx",
     "lint:fix": "eslint ./packages ./functions --ext .jsx,.js,.ts,.tsx --fix",
     "lint:format": "prettier --loglevel warn --write \"./{packages,functions}/**/*.{js,jsx,ts,tsx,css,md,json}\" "
