--- a/functions/package.json
+++ b/functions/package.json
@@ -6,7 +6,7 @@
     "dev": "npm run codegen & npm run collab",
     "codegen": "graphql-codegen --config _src/codegen.ts",
     "collab": "cross-env HOST=localhost PORT=1234 npx y-websocket",
-    "tsc": "tsc",
+    "tsc": "tsc && npm run sentry:sourcemaps",
     "test": "vitest",
     "emails:preview": "email dev --dir ./_src/emails/templates --port 8090",
     "emails:build": "ts-node ./_src/emails/build.ts"
@@ -18,6 +18,8 @@
     "@react-email/button": "^0.0.10",
     "@react-email/components": "^0.0.7",
     "@react-email/html": "^0.0.4",
+    "@sentry/node": "^7.79.0",
+    "@sentry/profiling-node": "^1.2.6",
     "algoliasearch": "^4.14.2",
     "axios": "^1.5.1",
     "crypto-hash": "^2.0.1",
