--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -36,6 +36,8 @@
     "@lexical/react": "^0.9.1",
     "@nhost/react": "^2.0.11",
     "@nhost/react-apollo": "^5.0.13",
+    "@sentry/react": "^7.79.0",
+    "@sentry/vite-plugin": "^2.9.0",
     "@stripe/react-stripe-js": "^1.16.4",
     "@stripe/stripe-js": "^1.46.0",
     "@tanstack/react-table": "^8.7.9",
@@ -83,29 +85,29 @@
     "@storybook/addon-essentials": "^7.2.2",
     "@storybook/addon-interactions": "^7.2.2",
     "@storybook/addon-links": "^7.2.2",
-    "@storybook/react-vite": "^7.2.2",
     "@storybook/react": "^7.2.2",
+    "@storybook/react-vite": "^7.2.2",
     "@storybook/testing-library": "0.2.0",
-    "@types/d3-hierarchy": "^3.0.2",
     "@types/d3": "^7.1.0",
+    "@types/d3-hierarchy": "^3.0.2",
     "@types/diff": "^5.0.2",
     "@types/lodash.debounce": "^4.0.7",
     "@types/lodash.isequal": "^4.5.5",
     "@types/lodash.throttle": "^4.1.6",
     "@types/lodash.uniqby": "^4.7.6",
+    "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-transition-group": "^4.4.5",
-    "@types/react": "^18.0.26",
     "@vitejs/plugin-react": "^3.0.1",
     "babel-loader": "^8.3.0",
     "cross-env": "^7.0.3",
     "rollup-plugin-visualizer": "^5.9.2",
     "storybook": "^7.2.2",
     "typescript": "^5.0.4",
+    "vite": "^4.4.9",
     "vite-plugin-svgr": "^3.2.0",
     "vite-tsconfig-paths": "^4.2.0",
-    "vite": "^4.4.9",
     "vitest": "^0.34.1"
   }
 }
