Add link to see next dates in recurrence

--- a/functions/package.json
+++ b/functions/package.json
@@ -6,7 +6,7 @@
     "dev": "npm run codegen & npm run collab",
     "codegen": "graphql-codegen --config _src/codegen.ts",
     "collab": "cross-env HOST=localhost PORT=1234 npx y-websocket",
-    "tsc": "tsc && npm run sentry:sourcemaps",
+    "tsc": "tsc",
     "test": "vitest",
     "emails:preview": "email dev --dir ./_src/emails/templates --port 8090",
     "emails:build": "ts-node ./_src/emails/build.ts"
