--- a/nhost/metadata/databases/default/tables/storage_files.yaml
+++ b/nhost/metadata/databases/default/tables/storage_files.yaml
@@ -69,44 +69,47 @@ insert_permissions:
     permission:
       check: {}
       columns:
-        - is_uploaded
-        - size
         - bucket_id
+        - created_at
         - etag
+        - id
+        - is_uploaded
+        - metadata
         - mime_type
         - name
-        - created_at
+        - size
         - updated_at
-        - id
         - uploaded_by_user_id
 select_permissions:
   - role: public
     permission:
       columns:
-        - is_uploaded
-        - size
         - bucket_id
+        - created_at
         - etag
+        - id
+        - is_uploaded
+        - metadata
         - mime_type
         - name
-        - created_at
+        - size
         - updated_at
-        - id
         - uploaded_by_user_id
       filter: {}
       limit: 1
   - role: user
     permission:
       columns:
-        - is_uploaded
-        - size
         - bucket_id
+        - created_at
         - etag
+        - id
+        - is_uploaded
+        - metadata
         - mime_type
         - name
-        - created_at
+        - size
         - updated_at
-        - id
         - uploaded_by_user_id
       filter: {}
       limit: 1
