--- a/nhost/metadata/databases/default/tables/tables.yaml
+++ b/nhost/metadata/databases/default/tables/tables.yaml
@@ -9,8 +9,10 @@
 - "!include auth_users.yaml"
 - "!include public_app_type.yaml"
 - "!include public_circle.yaml"
+- "!include public_circle_leader.yaml"
 - "!include public_circle_link.yaml"
 - "!include public_circle_member.yaml"
+- "!include public_circle_participant.yaml"
 - "!include public_decision.yaml"
 - "!include public_log.yaml"
 - "!include public_meeting.yaml"
