--- a/nhost/metadata/databases/default/tables/public_circle_link.yaml
+++ b/nhost/metadata/databases/default/tables/public_circle_link.yaml
@@ -41,7 +41,7 @@ insert_permissions:
       columns:
         - circleId
         - parentId
-    comment: ''
+    comment: ""
 select_permissions:
   - role: public
     permission:
@@ -53,7 +53,7 @@ select_permissions:
           org:
             shareMembers:
               _eq: true
-    comment: ''
+    comment: ""
   - role: user
     permission:
       columns:
@@ -62,7 +62,7 @@ select_permissions:
         - id
         - parentId
       filter: {}
-    comment: ''
+    comment: ""
 delete_permissions:
   - role: user
     permission:
@@ -93,4 +93,4 @@ delete_permissions:
                 member:
                   userId:
                     _eq: X-Hasura-User-Id
-    comment: ''
+    comment: ""
