--- a/nhost/metadata/databases/default/tables/public_meeting_attendee.yaml
+++ b/nhost/metadata/databases/default/tables/public_meeting_attendee.yaml
@@ -47,7 +47,7 @@ insert_permissions:
         - meetingId
         - memberId
         - present
-    comment: ''
+    comment: ""
 select_permissions:
   - role: user
     permission:
@@ -75,7 +75,7 @@ select_permissions:
                     members:
                       userId:
                         _eq: X-Hasura-User-Id
-    comment: ''
+    comment: ""
 update_permissions:
   - role: user
     permission:
@@ -114,7 +114,7 @@ update_permissions:
                             - role:
                                 _eq: Owner
       check: {}
-    comment: ''
+    comment: ""
 delete_permissions:
   - role: user
     permission:
@@ -150,7 +150,7 @@ delete_permissions:
                                 _eq: Admin
                             - role:
                                 _eq: Owner
-    comment: ''
+    comment: ""
 event_triggers:
   - name: index-meeting-attendee
     definition:
