--- a/nhost/metadata/databases/default/tables/public_circle_member.yaml
+++ b/nhost/metadata/databases/default/tables/public_circle_member.yaml
@@ -180,3 +180,21 @@ update_permissions:
                           userId:
                             _eq: X-Hasura-User-Id
       check: {}
+event_triggers:
+  - name: index-circle-member
+    definition:
+      delete:
+        columns: '*'
+      enable_manual: false
+      insert:
+        columns: '*'
+      update:
+        columns: '*'
+    retry_conf:
+      interval_sec: 10
+      num_retries: 3
+      timeout_sec: 60
+    webhook: '{{NHOST_FUNCTIONS_URL}}/routes/events/indexEntity'
+    headers:
+      - name: x-nhost-webhook-secret
+        value_from_env: NHOST_WEBHOOK_SECRET
