Refactor meeting start notification and current meeting state

--- a/nhost/metadata/databases/default/tables/public_meeting.yaml
+++ b/nhost/metadata/databases/default/tables/public_meeting.yaml
@@ -207,15 +207,16 @@ event_triggers:
           - endDate
           - ended
           - attendees
+          - currentStepId
           - archived
           - circleId
           - participantsMembersIds
           - videoConf
           - recurringId
           - recurringDate
-          - title
           - participantsScope
           - summary
+          - title
     retry_conf:
       interval_sec: 10
       num_retries: 3
