--- a/nhost/metadata/cron_triggers.yaml
+++ b/nhost/metadata/cron_triggers.yaml
@@ -1,3 +1,12 @@
+- name: end-old-meetings
+  webhook: '{{NHOST_FUNCTIONS_URL}}/routes/cron/endOldMeetings'
+  schedule: 45 * * * *
+  include_in_metadata: true
+  payload: {}
+  headers:
+    - name: x-nhost-webhook-secret
+      value_from_env: NHOST_WEBHOOK_SECRET
+  comment: ""
 - name: recurring-meetings
   webhook: '{{NHOST_FUNCTIONS_URL}}/routes/cron/createNextRecurringMeetings'
   schedule: 0 * * * *
