--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -44,12 +44,13 @@
     "algoliasearch": "^4.14.2",
     "crisp-sdk-web": "^1.0.18",
     "crypto-hash": "^2.0.1",
-    "d3": "^7.3.0",
-    "d3-hierarchy": "^3.1.1",
+    "d3": "^7.8.5",
+    "d3-hierarchy": "^3.1.2",
     "date-fns": "^2.28.0",
     "diff": "^5.0.0",
     "downshift": "^6.1.7",
     "easy-peasy": "^5.2.0",
+    "eventemitter3": "^5.0.1",
     "focus-visible": "^5.2.0",
     "framer-motion": "^10.12.14",
     "graphql": "^16.6.0",
@@ -62,6 +63,10 @@
     "lodash.throttle": "^4.1.1",
     "lodash.uniqby": "^4.7.0",
     "nanoid": "^3.3.1",
+    "pixi-actions": "^1.1.10",
+    "pixi-cull": "^2.1.1",
+    "pixi-stats": "^1.2.2",
+    "pixi.js": "^7.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-easy-crop": "^4.1.3",
@@ -88,8 +93,8 @@
     "@storybook/react": "^7.2.2",
     "@storybook/react-vite": "^7.2.2",
     "@storybook/testing-library": "0.2.0",
-    "@types/d3": "^7.1.0",
-    "@types/d3-hierarchy": "^3.0.2",
+    "@types/d3": "^7.4.3",
+    "@types/d3-hierarchy": "^3.1.6",
     "@types/diff": "^5.0.2",
     "@types/lodash.debounce": "^4.0.7",
     "@types/lodash.isequal": "^4.5.5",
