--- a/functions/package.json
+++ b/functions/package.json
@@ -57,6 +57,7 @@
     "@types/react": "^18.2.21",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2",
+    "vite-tsconfig-paths": "^4.3.1",
     "vitest": "^0.34.6"
   },
   "overrides": {
